--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -22,12 +22,16 @@ padding-bottom: 55px !important;
         width: 100% !important;
 }
 #footer2 {
-background-color: pink !important;
-position: fixed !important;
-left: 0 !important;
-bottom: 0 !important;
-height: 3px !important;
-width: 100% !important;
+    background-color: pink !important;
+    position: fixed !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    height: 60px !important;
+    width: 100% !important;
+    font-weight: bold;
+    color: #443f3f;
+}
+#currentSong {
 }
     body {zoom: 125% !important;}
     input#filename {
@@ -103,13 +107,15 @@ footer, #footer {
         width: 100%;
     }
     #footer2 {
-                   background-color: pink !important;
-                   position: fixed !important;
-                   left: 0 !important;
-                   bottom: 0 !important;
-                   height: 3px !important;
-                   width: 100% !important;
-               }
+    background-color: pink !important;
+    position: fixed !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    height: 60px !important;
+    width: 100% !important;
+    font-weight: bold;
+    color: #443f3f;
+}
 div#loggedin {
 width: 350px !important;
 margin: auto !important;
