Every other song was adding to queue

--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -9,6 +9,11 @@ min-height: 100% !important;
 header:nth-child(0), header:nth-child(1) {
 padding-top: 100px !important;
 }
+#currentSong {
+    margin-top: -90px;
+    font-size: 200%;
+    color: #443f3f;
+}
 header {
 border-bottom: 3px solid pink !important;
 padding-bottom: 55px !important;
@@ -26,7 +31,7 @@ padding-bottom: 55px !important;
     position: fixed !important;
     left: 0 !important;
     bottom: 0 !important;
-    height: 60px !important;
+    height: 100px !important;
     width: 100% !important;
     font-weight: bold;
     color: #443f3f;
