--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -116,7 +116,7 @@ footer, #footer {
     position: fixed !important;
     left: 0 !important;
     bottom: 0 !important;
-    height: 60px !important;
+    height: 60px;
     width: 100% !important;
     font-weight: bold;
     color: #443f3f;
