--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -1,23 +1,28 @@
 @media (max-device-width: 450px) {
-  div#loggedin {
-    height: 0px !important;
-}
+    div#loggedin {
+        height: 0px !important;
+    }
+
     html {
-position: relative !important;
-min-height: 100% !important;
-}
-header:nth-child(0), header:nth-child(1) {
-padding-top: 100px !important;
-}
-#currentSong {
-    margin-top: -90px;
-    font-size: 200%;
-    color: #443f3f;
-}
-header {
-border-bottom: 3px solid pink !important;
-padding-bottom: 55px !important;
-}
+        position: relative !important;
+        min-height: 100% !important;
+    }
+
+    header:nth-child(0), header:nth-child(1) {
+        padding-top: 100px !important;
+    }
+
+    #currentSong {
+        margin-top: -94px !important;
+        font-size: 200%;
+        color: #443f3f;
+    }
+
+    header {
+        border-bottom: 3px solid pink !important;
+        padding-bottom: 55px !important;
+    }
+
     footer, #footer {
         background-color: #443f3f !important;
         position: fixed !important;
@@ -25,178 +30,256 @@ padding-bottom: 55px !important;
         bottom: 0 !important;
         height: 200px !important;
         width: 100% !important;
+    }
+
+    #footer2 {
+        background-color: pink !important;
+        position: fixed !important;
+        left: 0 !important;
+        bottom: 0 !important;
+        height: 52px !important;
+        width: 100% !important;
+        font-weight: bold;
+        color: #443f3f;
+    }
+
+    body {
+        zoom: 125% !important;
+    }
+
+    input#filename {
+        height: 125px !important;
+        font-size: 250% !important;
+    }
+
+    #results {
+        height: 0px !important;
+        font-size: 250% !important;
+    }
+
+    #login, #spotify, #logout {
+        width: 100% !important;
+        border: none !important;
+        height: 140px !important;
+        font-size: 244% !important;
+        background-color: #77af28;
+        font-family: fantasy !important;
+    }
+
+    #searchBox, #filename {
+        width: 100% !important;
+        border: 0;
+        background: #ececec;
+        padding: 0 0 0 0;
+        margin: 0;
+        outline: 0;
+        border-radius: 0;
+        height: 166px !important;
+        font-size: -webkit-xxx-large;
+        text-align: center;
+        color: #72ad21;
+        font-weight: bold;
+        font-family: 'Roboto', sans-serif !important;
+    }
+
+    body {
+        width: 100%;
+        height: 0px !important;
+    }
+
+    html {
+        width: 100%;
+        background-color: #443f3f;
+        height: 100vh !important;
+    }
 }
+
+header:nth-child(0), header:nth-child(1) {
+    padding-top: 10px;
+}
+
+header {
+    border-bottom: 3px solid pink !important;
+    padding-bottom: 20px;
+}
+
+* {
+    overflow: visible;
+}
+* {
+   // font-family: 'Roboto', sans-serif !important;
+}
+#login, #spotify, #logout {
+    width: 100% !important;
+    border: none !important;
+    height: 156px;
+    font-size: 140%;
+    background-color: #77af28;
+    font-family: fantasy;
+}
+
+button#obtain-new-token {
+    visibility: hidden;
+}
+
+body {
+    width: 100%;
+    height: 0px !important;
+}
+
+html {
+    width: 100%;
+    background-color: #443f3f;
+    height: 100vh !important;
+}
+
+div#searchboxContainer {
+    position: fixed !important;
+    width: 100% !important;
+    opacity: 1;
+}
+
+#searchBox, #filename {
+    width: 100%;
+    border: 0;
+    background: #ececec;
+    padding: 0 0 0 0;
+    margin: 0;
+    outline: 0;
+    border-radius: 0;
+    height: 66px !important;
+    font-size: xx-large;
+    text-align: center;
+    color: #72ad21;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+footer, #footer {
+    background-color: #443f3f !important;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+}
+
 #footer2 {
     background-color: pink !important;
     position: fixed !important;
     left: 0 !important;
     bottom: 0 !important;
-    height: 100px !important;
+    height: 40px;
     width: 100% !important;
     font-weight: bold;
     color: #443f3f;
 }
-#currentSong {
+
+div#loggedin {
+    width: 350px !important;
+    margin: auto !important;
+    height: 0px !important;
 }
-    body {zoom: 125% !important;}
-    input#filename {
-height: 125px !important;
-font-size: 250% !important;
+
+body {
+    width: 100%;
+    margin: auto;
 }
-#results {
-height: 0px !important;
-font-size: 250% !important;
+
+div#searchBox {
+    width: inherit;
+    margin: auto;
+    margin-top: 0px;
 }
-#login, #spotify, #logout {
-width: 100% !important;
-border: none !important;
-height: 140px !important;
-font-size: 244% !important;
-background-color: #77af28;
+
+button#searchSongs {
+    margin-left: 5px;
 }
-#searchBox, #filename {
-width: 100% !important;
-border: 0;
-background: #ececec;
-padding: 0 0 0 0;
-margin: 0;
-outline: 0;
-border-radius: 0;
-height: 166px !important;
-font-size: -webkit-xxx-large;
-text-align: center;
-color: #72ad21;
-font-weight: bold;
-font-family: monospace !important;
+
+.dl-horizontal dd {
+    margin: 0;
 }
-body {width: 100%; height: 0px !important;}
-html {width: 100%; background-color: #443f3f; height: 100vh !important;}
+
+div#oauth {
+    display: none;
 }
-header:nth-child(0), header:nth-child(1) {
-padding-top: 10px;
+
+#login {
+    border-top: 5px solid #443f3f;
+    display: none;
+    width: 150px;
+    margin: auto;
 }
-header {
-border-bottom: 3px solid pink !important;
-padding-bottom: 20px;
+
+#loggedin {
+    display: auto;
 }
-*{overflow: visible;}
-#login, #spotify, #logout {width: 100% !important; border: none !important; height: 156px; font-size: 140%; background-color: #77af28;}
+
+.text-overflow {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 500px;
+}
+
+body {
+    padding: 0px;
+}
+
+#search-form, .form-control {
+    // margin-bottom: 20px;
+}
+
+.cover {
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    background-size: cover;
+}
+
+.media, .media-body, div#oauth, div#user-profile, h1 {
+    height: 0px;
+}
+
+div#results {
+    width: 100% !important;
+    color: white;
+    font-weight: bold;
+    padding-top: 5px;
+    background-color: #443f3f;
+    //height: 1000px !important;
+}
+
+.cover:hover {
+    cursor: pointer;
+}
+
+.cover.playing {
+    border: 5px solid #e45343;
+}
+
+dt {
+    text-align: left !important;
+}
 
 button#obtain-new-token {
-visibility: hidden;
+    width: 346px;
 }
-body {width: 100%; height: 0px !important;}
-html {width: 100%; background-color: #443f3f; height: 100vh !important;}
-div#searchboxContainer {position:fixed !important; width: 100% !important; opacity: 1;}
-#searchBox, #filename {
-width: 100%;
-border: 0;
-background: #ececec;
-padding: 0 0 0 0;
-margin: 0;
-outline: 0;
-border-radius: 0;
-height: 66px !important;
-font-size: xx-large;
-text-align: center;
-color: #72ad21;
-font-weight: bold;
-font-family: monospace !important;
-}
-footer, #footer {
-        background-color: #443f3f !important;
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        height: 50px;
-        width: 100%;
-    }
-    #footer2 {
-    background-color: pink !important;
-    position: fixed !important;
-    left: 0 !important;
-    bottom: 0 !important;
-    height: 60px;
-    width: 100% !important;
-    font-weight: bold;
-    color: #443f3f;
-}
-div#loggedin {
-width: 350px !important;
-margin: auto !important;
-height: 0px !important
-}
-body {
-width: 100%;
-margin: auto;
-}
-div#searchBox {
-width: inherit;
-margin:auto;
-margin-top: 0px;
-}
-button#searchSongs {
-margin-left: 5px;
-}
-.dl-horizontal dd {
-margin: 0;
-}
-div#oauth {display: none;}
-#login {
-border-top: 5px solid #443f3f;
-display: none;
-width: 150px;
-margin: auto;
-}
-#loggedin {
-display: auto;
-}
-.text-overflow {
-overflow: hidden;
-text-overflow: ellipsis;
-white-space: nowrap;
-width: 500px;
-}
-body {
-padding: 0px;
-}
-#search-form, .form-control {
-// margin-bottom: 20px;
-}
-.cover {
-width: 300px;
-height: 300px;
-display: inline-block;
-background-size: cover;
-}
-.media, .media-body, div#oauth, div#user-profile, h1 { height: 0px;}
+
 div#results {
-width: 100% !important;
-color: white;
-font-weight: bold;
-padding-top: 5px;
-background-color: #443f3f;
-//height: 1000px !important;
+    width: 340px;
+    margin: auto;
+    padding-top: 5px;
 }
-.cover:hover {
-cursor: pointer;
-}
-.cover.playing {
-border: 5px solid #e45343;
-}
-dt {
-text-align: left !important;
-}
-button#obtain-new-token {
-width: 346px;
-}
-div#results {
-width: 340px;
-margin: auto;
-padding-top: 5px;
-}
+
 button#setDefaultPlaylist {
-width: 347px;
-margin-top: 20px;
+    width: 347px;
+    margin-top: 20px;
 }
-div#searchboxContainer {position:fixed !important; width: 100% !important; opacity: 1;}
+
+div#searchboxContainer {
+    position: fixed !important;
+    width: 100% !important;
+    opacity: 1;
+}
