--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -137,7 +137,9 @@ header {
 button#obtain-new-token {
     visibility: hidden;
 }
-
+div#login {
+    height: 0px !important;
+}
 body {
     width: 100%;
     height: 0px !important;
