--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -8,7 +8,7 @@
         min-height: 100% !important;
     }
 input#partyID {
-    margin-top: 45%;
+    margin-top: 33% !important;
     height: 100px !important;
     width: 365px !important;
     margin-left: 2%;
