--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -35,9 +35,8 @@ input#partyID {
         position: fixed !important;
         left: 0 !important;
         bottom: 0 !important;
-        height: 200px !important;
-        width: 100% !important;
-        margin-bottom: 55%;
+height: 46% !important;
+width: 100% !important;
     }
 
     #footer2 {
