--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -35,7 +35,7 @@ input#partyID {
         position: fixed !important;
         left: 0 !important;
         bottom: 0 !important;
-height: 49% !important;
+height: 49vh !important;
 width: 100% !important;
     }
 
