--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -17,10 +17,20 @@
         position: relative !important;
         min-height: 100% !important;
     }
-input#partyID {
+    div#hideThis {
+        zoom: 180% !important;
+    }
+    div#link {
+    height: 62px;
+    width: 291px;
+    background: #00f629 !important;
+    border: 2px solid black;
+    border-radius: 8px;
+    margin-top: 20px;
+    margin-left: 8px !important;
+}
+input#partyID, #spotify {
     margin-top: 15% !important;
-    height: 100px !important;
-    width: 365px !important;
     margin-left: 2%;
     font-size: 335%;
     font-weight: lighter;
@@ -73,29 +83,6 @@ width: 100% !important;
         height: 0px !important;
         font-size: 250% !important;
     }
-
-    #login, #spotify, #logout {
-    width: 291px !important;
-    border: none !important;
-    font-size: 140%;
-    background-color: #77af28;
-    font-family: fantasy;
-    height: 62px;
-    border-radius: 8px;
-    margin: auto !important;
-    margin-top: -190px !important;
-    position: absolute;
-    margin-left: 13% !important;
-}
-a#spotify, #spotify {
-margin-top: 15px;
-width: 365px !important;
-margin-left: -22% !important;
-height: 100px !important;
-font-size: 375% !important;
-margin-top: 100px !important;
-border: 2px solid black !important;
-}
     #searchBox, #filename {
         width: 100% !important;
         border: 0;
@@ -139,19 +126,7 @@ header {
 * {
    // font-family: 'Roboto', sans-serif !important;
 }
-#login, #spotify, #logout {
-    width: 291px !important;
-    border: none !important;
-    font-size: 140%;
-    background-color: #77af28;
-    font-family: fantasy;
-    height: 62px;
-    border-radius: 8px;
-    margin: auto !important;
-    margin-top: -190px !important;
-    position: absolute;
-    margin-left: 13% !important;
-}
+
 button#obtain-new-token {
     visibility: hidden;
 }
@@ -161,6 +136,24 @@ div#login {
 body {
     width: 100%;
     height: 0px !important;
+}
+div#link {
+    height: 62px;
+    width: 291px;
+    background: #00f629 !important;
+    border: 2px solid black;
+    border-radius: 8px;
+    margin-top: 20px;
+}
+#spotify {
+    width: 291px !important;
+    border: none !important;
+    font-size: 140%;
+    background-color: #00f629 !important;
+    font-family: fantasy;
+    height: 62px !important;
+    border-radius: 8px;
+    margin-left: 6px !important;
 }
 
 html {
@@ -219,11 +212,25 @@ footer, #footer {
     margin-top: 15%;
     border-radius: 8px;
     height: 62px !important;
-    font-size: xx-large;
+    font-size: 288%;
     text-align: center;
     color: #72ad21;
-    font-weight: bold;
-    font-family: fantasy;
+    font-weight: lighter;
+    font-family: sans-serif;
+}
+#spotify {
+  border: 2px solid black;
+  width: 291px;
+  background: #ececec;
+  padding: 0 0 0 0;
+  margin-top: 15%;
+  border-radius: 8px;
+  height: 62px !important;
+  font-size: 288%;
+  text-align: center;
+  color: #ffffff;
+  font-weight: lighter;
+  font-family: sans-serif;
 }
 input#partyID:focus {
     border: 2px solid blue !important;
@@ -235,6 +242,7 @@ div#results, body {
 }
 a#spotify:hover, a#spotify:active {
     background-color: #96f896;
+    text-decortation: none !important;
 }
 div#loggedin {
     width: 350px !important;
@@ -352,8 +360,4 @@ div#searchboxContainer {
     position: fixed !important;
     width: 100% !important;
     opacity: 1;
-}
-a#spotify, #spotify {
-  margin-top: 15px; width: 291px; margin-left: -19%; height: 62px; font-size: 236%; margin-top: 100px; border: 2px solid black;
-
 }
