--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -239,8 +239,7 @@ input#partyID:focus {
 }
 div#results, body {
     height: 100% !important;
-    background: #b39f98 !important;
-
+background: #adadad !important;
 }
 a#spotify:hover, a#spotify:active {
     background-color: #96f896;
