--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -331,7 +331,12 @@ div#results {
     font-weight: bold;
     padding-top: 5px;
     background: #443f3f;
-    //height: 1000px !important;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .cover:hover {
