--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -130,7 +130,9 @@ header {
 * {
    // font-family: 'Roboto', sans-serif !important;
 }
-
+div#footer2 {
+    overflow-y: hidden;
+}
 button#obtain-new-token {
     visibility: hidden;
 }
