--- a/authorization_code/public/styles/style.css
+++ b/authorization_code/public/styles/style.css
@@ -72,7 +72,7 @@ width: 100% !important;
     }
 
    body {
-    
+
       zoom: 45% !important;
 }
 
@@ -124,13 +124,15 @@ header {
     padding-bottom: 20px;
 }
 
-* {
-    overflow: visible;
+body {
+    overflow-x: hidden;
 }
 * {
    // font-family: 'Roboto', sans-serif !important;
 }
-
+div#footer2 {
+  //  overflow-y: hidden;
+}
 button#obtain-new-token {
     visibility: hidden;
 }
@@ -331,7 +333,12 @@ div#results {
     font-weight: bold;
     padding-top: 5px;
     background: #443f3f;
-    //height: 1000px !important;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .cover:hover {
